# design-loop-ai

./: 404.html  README.md  agent_designer.py  design_agent.py  index.html  iterative_design.py  journal-design-loop-ai.mdx  main.py  metrics.py  mkdocs.yml  pyproject.toml  sitemap.xml
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  index.md  reference.md  research.md
docs/getting-started/: installation.md  quick-start.md
examples/: iteration_0.html  iteration_1.html  iteration_2.html  iteration_3.html  iteration_4.html  iteration_5.html  iteration_6.html  iteration_7.html  iteration_8.html  iteration_9.html  metrics_history.json  spec_initial.json
getting-started/installation/: index.html
getting-started/quick-start/: index.html
paper/: main.aux  main.out  main.tex
reference/: index.html
research/: index.html
search/: search_index.json
tests/: __init__.py  test_act.py  test_agent.py  test_agent_observe.py  test_agent_think.py  test_backward_compatibility.py  test_design_agent_init.py  test_e2e.py  test_environment.py  test_helpers.py  test_integration_iteration_cycle.py  test_iterative_design.py  test_main.py  test_metrics.py  test_metrics_accessibility.py  test_metrics_harmony.py  test_metrics_symmetry.py  test_spec.py  test_think.py
