[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "design-loop-ai"
version = "0.1.0"
description = "Self-improving agent using visual feedback for automated design."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Young", email = "research@automate-capture.com" },
]
keywords = ["AI", "Design", "Reinforcement Learning", "Visual Feedback", "Automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/Lumi-node/design-loop-ai"
Documentation = "https://lumi-node.github.io/design-loop-ai/"
Repository = "https://github.com/Lumi-node/design-loop-ai"
Issues = "https://github.com/Lumi-node/design-loop-ai/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
